fix: overflow

--- a/.vitepress/theme/style.scss
+++ b/.vitepress/theme/style.scss
@@ -7,9 +7,9 @@
         display: block;
         top: 0;
         bottom: 0;
-        width: 100lvw;
         z-index: -1;
-        left: -24px;
+        left: -9999rem;
+        right: -9999rem;
         background: var(--sw-c-gray-100);
         .dark & {
             background: var(--sw-c-gray-dark-700);
@@ -22,21 +22,6 @@
     }
 }
 
-@media (min-width: 768px) {
-    .SwagLandingCardListWrapper,
-    .c-link-line {
-        &::before {
-            left: -32px;
-        }
-    }
-}
-
-/* 1024 + 32 + 32 */
-@media (min-width: 1088px) {
-    .SwagLandingCardListWrapper,
-    .c-link-line {
-        &::before {
-            left: calc((100lvw - 1024px) / -2);
-        }
-    }
+.VPDoc {
+    overflow: hidden;
 }
